test/conformance/chainsaw/generating-policies/ssa/update/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ssa-update-ns
