test/conformance/chainsaw/generating-policies/ssa/update/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: ssa-generate-cm-update
spec:
  useServerSideApply: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: configmap
      expression: >-
        [
          {
            "kind": dyn("ConfigMap"),
            "apiVersion": dyn("v1"),
            "metadata": dyn({
              "name": "ssa-update-config",
              "namespace": string(variables.nsName),
            }),
            "data": dyn({
              "mode": "ssa",
              "key": "original"
            })
          }
        ]
  generate:
    - expression: generator.apply(variables.nsName, variables.configmap)
