test/conformance/chainsaw/generating-policies/ssa/update/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ssa-update-config
  namespace: ssa-update-ns
data:
  mode: ssa
  key: original
